kubernetes/client-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onestore-client-front
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: onestore-client-front
